--- a/src/index.css
+++ b/src/index.css
@@ -34,4 +34,8 @@ a , a:hover {
 .shadow{
   box-shadow: 1px 1px 1px 1px black;
 }
+@media only screen and (max-width: 600px) {
+  input{padding: 30px;}
+}
+
 
